# Article_Crontrol_System

./: .dockerignore  .env.docker  .gitignore  Dockerfile  README.md  docker-compose.yml  mailgun_test.py  package-lock.json  package.json  pyproject.toml  start-django.sh  tailwind.config.js
app_dj/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
app_dj/migrations/: 0001_initial.py  0002_create_superuser.py  0003_articles_creator.py  0004_alter_userprofile_managers_alter_userprofile_email.py
django_pj/: settings.py  urls.py
static/: input.css  output.css
templates/: base.html
templates/account/: login.html  signup.html
templates/allauth/elements/: h1.html
templates/allauth/layouts/: base.html
templates/app_dj/: article_create.html  article_delete.html  article_update.html  base.html  home.html
templates/app_dj/layouts/: base_form.html
templates/registration/: login.html
