[project]
name = "django-pj"
version = "0.1.0"
description = ""
authors = [
    {name = "CioF",email = "coder.walidhasan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "django-allauth[socialaccount] (>=65.7.0,<66.0.0)",
    "psycopg (>=3.2.6,<4.0.0)",
    "dj-database-url (>=2.3.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "django_pj", from = "src"}]


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^5.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
